--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,11 @@
 ufw-frontends
 Version 0.3.1
+09-11-2011
 
 
 Fixed bugs:
 
+* Issue 16: "deny out" rules are not correctly exported
 * Issue 17: ufw-gtk fails to run if LOG_FILE not found
 
 
